# mlx-lama

./: CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
src/mlx_lama/: __init__.py  cli.py  config.py  models.py  process.py  progress.py  proxy.py  registry.py  server.py  stats.py  top.py
src/mlx_lama/backends/: __init__.py  base.py  mlx_lm_backend.py  ollama_backend.py  vllm_mlx_backend.py
src/mlx_lama/data/: models.yaml
tests/: __init__.py
